--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "node ./bin/www"
     },
     "dependencies": {
+        "crypto": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "~4.16.1",
         "mysql2": "^3.2.4",
