--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "crypto": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "~4.16.1",
+        "jsonwebtoken": "^9.0.0",
         "mysql2": "^3.2.4",
+        "rand-token": "^1.0.1",
         "sequelize": "^6.31.1"
     }
 }
