--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "nodemon ./bin/www"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.0.3",
         "express": "~4.16.1",
