--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.0",
     "private": true,
     "scripts": {
-        "start": "nodemon ./bin/www"
+        "dev": "nodemon ./bin/www",
+        "start": "pm2 start ./bin/www --watch"
     },
     "dependencies": {
         "cors": "^2.8.5",
