--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "dotenv": "^16.0.3",
         "express": "~4.16.1",
         "jsonwebtoken": "^9.0.0",
+        "morgan": "^1.10.0",
         "mysql2": "^3.2.4",
         "rand-token": "^1.0.1",
         "sequelize": "^6.31.1"
