chore: gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -222,4 +222,6 @@ $RECYCLE.BIN/
 #Key
 config/secretKey.js
 
+# venv
+venv/
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,macos,windows
