--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "morgan": "^1.10.0",
         "mysql2": "^3.2.4",
         "rand-token": "^1.0.1",
+        "redis": "^4.6.7",
         "sequelize": "^6.31.1"
     }
 }
